# github_actions_playground

./: push-to-current-branch.sh  push-to-main.sh  push-to-newly-created-branch.sh
.github/workflows/: InitialCI.yml  build-and-push-docker-image.yaml  build_and_push_docker_image.yaml  build_binary_and_system_test.yaml  build_image_and_push.yaml  child1.yaml  child2.yaml  clone-and-run-system-tests.yaml  clone-and-run-unit-tests.yaml  clone_and_unit_test.yaml  docker-image.yml  gchild11.yaml  gchild12.yaml  parent.yaml  push_to_master.yaml  skeleton.yaml  unit_test.yaml
ghap/: CMakeLists.txt  Dockerfile  cmake_install.cmake
ghap/main/: main_calc.cpp
ghap/main/calculator/: calculator.cpp
ghap/succeed_app/: CMakeCache.txt  Makefile  cmake_install.cmake
ghap/system-test/: CMakeCache.txt  Makefile  basic-calculator  calc_system_test.cpp  cmake_install.cmake  system-tests
ghap/test/: CMakeCache.txt  CMakeLists.txt  Makefile  calc_test.cpp  cmake_install.cmake  unit-tests
